--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -27,7 +27,7 @@
 .App-link {
   color: #61dafb;
 }
-.related{
+.related {
   background-color: grey;
   width: 50vh;
   margin: auto;
@@ -42,7 +42,7 @@
     transform: rotate(360deg);
   }
 }
-.explain h1{
+.explain h1 {
   background-color: grey;
   font-size: 2rem;
   font-weight: bold;
@@ -50,11 +50,24 @@
   width: 50vh;
   margin: auto;
 }
-.explain h2{
+.explain h2 {
   background-color: grey;
   font-size: 2rem;
   font-weight: bold;
   color: white;
   width: 50vh;
   margin: auto;
+}
+.Login {
+  margin: auto;
+  text-align: center;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+#root {
+  height: 100vh;
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
