--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -70,11 +70,11 @@
   align-items: center;
   display: flex;
   justify-content: center;
-  background-color:  #a0ca4e;
+  background-color: #a0ca4e;
   position: relative;
   margin-top: 40vh;
 }
-#button{
+#button {
   background-color: #3e77e0;
   color: white;
   width: 100px;
@@ -82,60 +82,66 @@
   border-radius: 10%;
   margin-left: 0.52vh;
 }
-body{
+body {
   height: 100vh;
-  white-space: pre-wrap;
 }
-#email{
+#email {
   margin-bottom: 0.5vh;
 }
-#form{
+#form {
   display: table;
 }
-.passr{display:table-row;}
-#new{
+.passr {
+  display: table-row;
+}
+#new {
   margin-top: 1vh;
   height: auto;
   width: auto;
   color: grey;
   text-decoration: underline;
- 
-  
 }
-#del{
+#del {
   margin-top: 1vh;
   height: auto;
   width: auto;
   color: grey;
- 
+
   float: right;
   margin-right: 1vh;
   font-size: 2rem;
   margin-top: -0.5vh;
 }
-#new1{
+#new1 {
   margin-top: 1vh;
   visibility: collapse;
 }
-.popup{
+.popup {
   position: absolute;
   width: 50vh;
   height: 70vh;
   background-color: #fafafa;
   margin: auto;
 }
-#form1{
-  margin:auto;
+#form1 {
+  margin: auto;
 }
-.passr2{
+.passr2 {
   margin-left: 5vh;
   margin-bottom: 10vh;
 }
-.input{
+.input {
   margin: auto;
 }
-.sign{
+.sign {
   margin-top: 5vh;
   font-size: 2rem;
   margin-bottom: 7vh;
+}
+.header {
+  margin: 0px;
+  background-color: #a0ca4e;
+}
+#root {
+  margin: 0px;
 }
