--- a/frontend/src/HHG_problemlist.css
+++ b/frontend/src/HHG_problemlist.css
@@ -1,9 +1,3 @@
-/* .problemlist_container {
-    display: flex;
-    flex-direction: column;
-    background-color: lightblue;
-} */
-
 .common_header_logout {
     display: flex;
     flex-direction: row;
@@ -13,7 +7,6 @@
     height: 70px;
     padding-left: 11px;
     padding-right: 11px;
-    justify-content: space-between;
 }
 
 .signin {
@@ -28,6 +21,17 @@
     border: 1px solid #FFFFFF;
     padding-left: 13px;
     padding-right: 13px;
+}
+
+.common_header_group3 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 175px;
+}
+
+.common_header_space3 {
+    width: 1225px;
 }
 
 .problemlist_container {
