--- a/frontend/src/problemlist.css
+++ b/frontend/src/problemlist.css
@@ -14,7 +14,6 @@ img {
   display: flex;
 }
 
-
 .problemlist_container {
   width: 100vw;
   height: 100vh;
@@ -22,7 +21,7 @@ img {
 }
 
 .problemlist_container_inner {
-  height: 100%;
+  height: 80%;
   margin: 50px;
   background-color: white;
   border-radius: 0.8rem;
@@ -32,6 +31,8 @@ img {
 
 .problemlist_title {
   margin-bottom: 10px;
+  font-size: 30px;
+  font-weight: bold;
 }
 
 .problemlist_left_container {
@@ -40,4 +41,45 @@ img {
 
 .problemlist_right_container {
   margin-top: 120px;
+  flex-grow: 1;
+  padding-right: 60px;
+}
+
+.problem_name {
+  font-size: 20px;
+}
+
+.problem_statistics {
+  display: grid;
+  grid-template-columns: 200px 150px;
+  text-align: left;
+  font-size: 18px;
+}
+
+.difficulty_veryeasy {
+  color: #55B8F9;
+}
+
+.difficulty_easy {
+  color: #E9AD53;
+}
+
+.difficulty_medium {
+  color: #6EC45D;
+}
+
+.difficulty_hard {
+  color: #ED7335;
+}
+
+.difficulty_veryhard {
+  color: #B861DA;
+}
+
+.problemlist_element {
+  display: flex;
+  flex-direction: column;
+  border-top: 1px solid #D1D1D1;
+  padding-top: 4px;
+  padding-bottom: 4px;
 }
