add frontend feature

--- a/frontend/src/HHG_main.css
+++ b/frontend/src/HHG_main.css
@@ -66,11 +66,11 @@
 }
 
 .common_header_space1 {
-    width: 380px;
+    width: 520px;
 }
 
 .common_header_space2 {
-    width: 300px;
+    /* width: 300px; */
 }
 
 
