--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,25 +6,28 @@
   height: 40vmin;
   pointer-events: none;
 }
+
 .userID {
   float: right;
   margin-top: -6vh;
   margin-right: 1vh;
   color: white;
 }
+
 .title {
   float: left;
 }
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
+
 #chart {
   display: inline-block;
   vertical-align: center;
-  margin-left: 30vw;
-  margin-right: 30vw;
+  padding-left: 10vw;
   position: relative;
 }
 
@@ -39,10 +42,12 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
 }
+
 .explain h1 {
   background-color: grey;
   font-size: 2rem;
@@ -51,6 +56,7 @@
   width: 50vh;
   margin: auto;
 }
+
 .explain h2 {
   background-color: grey;
   font-size: 2rem;
@@ -59,6 +65,7 @@
   width: 50vh;
   margin: auto;
 }
+
 .login_total_container {
   height: 100vh;
   display: flex;
@@ -70,13 +77,15 @@
   display: flex;
   justify-content: center;
   /* background-image: url("img/intro.png"); */
-  background-color: #E6E6E6;
+  background-color: #e6e6e6;
 }
+
 .header {
   margin: 0px;
-  background-color: #0E151B ;
+  background-color: #0e151b;
   color: white;
 }
+
 .Login {
   margin: auto;
   text-align: center;
@@ -84,6 +93,7 @@
   display: flex;
   justify-content: center;
 }
+
 .Login {
   height: 30vh;
   width: 30vw;
@@ -91,10 +101,11 @@
   align-items: center;
   display: flex;
   justify-content: center;
-  background-color: #0E151B;
+  background-color: #0e151b;
   position: relative;
   margin-top: 35vh;
 }
+
 #button {
   background-color: #3e77e0;
   color: white;
@@ -103,18 +114,23 @@
   border-radius: 10%;
   margin-left: 0.52vh;
 }
+
 body {
   height: 100vh;
 }
+
 #email {
   margin-bottom: 0.5vh;
 }
+
 #form {
   display: table;
 }
+
 .passr {
   display: table-row;
 }
+
 #new {
   margin-top: 1vh;
   height: auto;
@@ -122,6 +138,7 @@ body {
   color: grey;
   text-decoration: underline;
 }
+
 #del {
   margin-top: 1vh;
   height: auto;
@@ -133,6 +150,7 @@ body {
   font-size: 2rem;
   margin-top: -0.5vh;
 }
+
 #new1 {
   margin-top: 1vh;
   visibility: collapse;
@@ -145,16 +163,20 @@ body {
   background-color: #fafafa;
   margin: auto;
 }
+
 #form1 {
   margin: auto;
 }
+
 .passr2 {
   margin-left: 5vh;
   margin-bottom: 10vh;
 }
+
 .input {
   margin: auto;
 }
+
 .sign {
   margin-top: 5vh;
   font-size: 2rem;
@@ -164,18 +186,27 @@ body {
 #root {
   margin: 0px;
 }
+
 .banner {
-  background-color: #0E151B;
+  background-color: #0e151b;
   color: white;
   text-align: center;
 }
+
 .list td {
   text-align: center;
 }
+
 .list {
   text-align: center;
 }
+
 .result {
   text-align: center;
   font-size: 2rem;
+}
+.con {
+  height: 40vh;
+  width: auto;
+  overflow: auto;
 }
