버튼 그룹화, 홈버튼 링크 추가, 하단바 추가

--- a/frontend/src/HHG_main.css
+++ b/frontend/src/HHG_main.css
@@ -9,6 +9,17 @@
     padding-right: 11px;
 }
 
+.common_footer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: #0E151B;
+    color: white;
+    height: 70px;
+    padding-left: 11px;
+    padding-right: 11px;
+}
+
 .home_button {
     display: flex;
     flex-direction: row;
