--- a/frontend/src/HHG_right_up.css
+++ b/frontend/src/HHG_right_up.css
@@ -13,7 +13,7 @@
     padding-left: 11px;
     padding-right: 11px;
     /* 추가 */
-    /* justify-content: space-between; */
+    justify-content: right;
     width: 55vw;
     background-color: #EDEDF0;
 }
