--- a/frontend/src/HHG_main.css
+++ b/frontend/src/HHG_main.css
@@ -62,6 +62,7 @@
     border: 1px solid #FFFFFF;
     padding-left: 13px;
     padding-right: 13px;
+    margin-left: 10px;
 }
 
 .common_header_group1 {
@@ -72,7 +73,7 @@
 
 .common_header_group2 {
     display: flex;
-    justify-content: space-between;
+    justify-content: right;
     width: 210px;
 }
 
