--- a/frontend/src/problemlist.css
+++ b/frontend/src/problemlist.css
@@ -1,5 +1,9 @@
 .Search {
     float: left;
+    /*border: 1px solid black;*/
+}
+.Search > .passr >  input{
+    border-bottom:1px solid black;
 }
 
 .problemtable {
@@ -15,6 +19,9 @@ img {
 
 .passr {
     display: flex;
+}
+#email{
+    border-bottom: 2px solid #D9D9D9;
 }
 
 .problemlist_container {
@@ -85,4 +92,5 @@ img {
     border-top: 1px solid #D1D1D1;
     padding-top: 4px;
     padding-bottom: 4px;
+    cursor:pointer;
 }
