버튼 그룹짓기, 클래스명 변경

--- a/frontend/src/Left.css
+++ b/frontend/src/Left.css
@@ -60,7 +60,7 @@
     height: 0;
 }
 
-.left-header {
+.left-header-old {
     background-color: #F7F8FA;
     padding-left: 10px;
     border: 1px solid #EDEDF0;
