--- a/frontend-legacy/src/HHG_main.css
+++ b/frontend-legacy/src/HHG_main.css
@@ -42,8 +42,7 @@
 .student_id {
     border-radius: 0.5rem;
     border: 1px solid #A8C860;
-    padding-left: 11px;
-    padding-right: 11px;
+    padding: 5px 11px;
 }
 
 .logout {
