--- a/frontend/src/HHG_main.css
+++ b/frontend/src/HHG_main.css
@@ -53,15 +53,16 @@
 .student_id {
     border-radius: 0.5rem;
     border: 1px solid #A8C860;
-    padding-left: 11px;
-    padding-right: 11px;
+    padding: 5px 11px;
+    white-space: nowrap;
 }
 
 .logout {
     border-radius: 0.5rem;
     border: 1px solid #FFFFFF;
-    padding-left: 13px;
-    padding-right: 13px;
+    white-space: nowrap;
+    padding: 5px 13px;
+    margin-right:40px;
     margin-left: 10px;
 }
 
